[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
editor = []

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy_rapier3d = { version = "0.16.1", features = ["simd-stable", "parallel"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", rev = "9aa28e3" }
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "a1095b9" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
